--- a/anewfile.html
+++ b/anewfile.html
@@ -2,6 +2,7 @@
     <head>
         <body>
             <h1>how are ya</h1>
+            <h2>great thanks</h2>
         </body>
     </head>
 </html>
